// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions matches snapshot with no transactions 1`] = `
<div>
  <div
    className="MuiPaper-root-23 MuiPaper-elevation0-25 MuiPaper-rounded-24"
  >
    <div
      className="MuiToolbar-root-57 MuiToolbar-regular-59 MuiToolbar-gutters-58 TableToolbar-root-51"
    >
      <div
        className="TableToolbar-title-56"
      >
        <h6
          className="MuiTypography-root-61 MuiTypography-h6-78"
          id="tableTitle"
        >
          undefined - undefined
        </h6>
      </div>
      <div
        className="TableToolbar-spacer-53"
      />
      <div
        className="TableToolbar-actions-54"
      >
        <div
          className="TableToolbar-buttons-55"
        >
          <button
            aria-describedby={null}
            aria-label="Import transaction"
            className="MuiButtonBase-root-110 MuiIconButton-root-104"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="Import transaction"
            type="button"
          >
            <span
              className="MuiIconButton-label-109"
            >
              <svg
                className="withRouter-TransactionsToolbarComponent--importButton-50"
                style={
                  Object {
                    "width": "1.5rem",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M14,12L10,8V11H2V13H10V16M20,18V6C20,4.89 19.1,4 18,4H6C4.9,4 4,4.9 4,6V9H6V6H18V18H6V15H4V18C4,19.1 4.9,20 6,20H18C19.1,20 20,19.1 20,18Z"
                  style={Object {}}
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-132"
            />
          </button>
          <button
            aria-describedby={null}
            aria-label="New transaction"
            className="MuiButtonBase-root-110 MuiIconButton-root-104"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="New transaction"
            type="button"
          >
            <span
              className="MuiIconButton-label-109"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-113"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-132"
            />
          </button>
        </div>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <div
          aria-colcount={6}
          aria-rowcount={0}
          className="ReactVirtualized__Table"
          role="grid"
          style={Object {}}
        >
          <div
            className="ReactVirtualized__Table__headerRow undefined"
            role="row"
            style={
              Object {
                "height": 25,
                "overflow": "hidden",
                "paddingRight": 0,
                "width": 0,
              }
            }
          >
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 40px",
                  "flex": "0 1 40px",
                  "msFlex": "0 1 40px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
              >
                <span
                  className="MuiButtonBase-root-110 MuiIconButton-root-104 MuiPrivateSwitchBase-root-128 MuiCheckbox-root-122 MuiCheckbox-colorSecondary-127"
                  onBlur={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-109"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-113"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-131"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-132"
                  />
                </span>
              </span>
            </div>
            <div
              aria-label="Date"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 120px",
                  "flex": "0 1 120px",
                  "msFlex": "0 1 120px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Date"
              >
                Date
              </span>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "1 1 200px",
                  "flex": "1 1 200px",
                  "msFlex": "1 1 200px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Description"
              >
                Description
              </span>
            </div>
            <div
              aria-label="In"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 100px",
                  "flex": "0 1 100px",
                  "msFlex": "0 1 100px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="In"
              >
                In
              </span>
            </div>
            <div
              aria-label="Out"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 100px",
                  "flex": "0 1 100px",
                  "msFlex": "0 1 100px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Out"
              >
                Out
              </span>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 40px",
                  "flex": "0 1 40px",
                  "msFlex": "0 1 40px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
              />
            </div>
          </div>
          <div
            aria-label="grid"
            aria-readonly={true}
            className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
            onScroll={[Function]}
            role="rowgroup"
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "boxSizing": "border-box",
                "direction": "ltr",
                "height": -25,
                "overflowX": "hidden",
                "overflowY": "auto",
                "position": "relative",
                "width": 0,
                "willChange": "transform",
              }
            }
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Transactions matches snapshot with one transaction 1`] = `
<div>
  <div
    className="MuiPaper-root-23 MuiPaper-elevation0-25 MuiPaper-rounded-24"
  >
    <div
      className="MuiToolbar-root-57 MuiToolbar-regular-59 MuiToolbar-gutters-58 TableToolbar-root-51"
    >
      <div
        className="TableToolbar-title-56"
      >
        <h6
          className="MuiTypography-root-61 MuiTypography-h6-78"
          id="tableTitle"
        >
          TD - undefined
        </h6>
      </div>
      <div
        className="TableToolbar-spacer-53"
      />
      <div
        className="TableToolbar-actions-54"
      >
        <div
          className="TableToolbar-buttons-55"
        >
          <button
            aria-describedby={null}
            aria-label="Import transaction"
            className="MuiButtonBase-root-110 MuiIconButton-root-104"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="Import transaction"
            type="button"
          >
            <span
              className="MuiIconButton-label-109"
            >
              <svg
                className="withRouter-TransactionsToolbarComponent--importButton-50"
                style={
                  Object {
                    "width": "1.5rem",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M14,12L10,8V11H2V13H10V16M20,18V6C20,4.89 19.1,4 18,4H6C4.9,4 4,4.9 4,6V9H6V6H18V18H6V15H4V18C4,19.1 4.9,20 6,20H18C19.1,20 20,19.1 20,18Z"
                  style={Object {}}
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-132"
            />
          </button>
          <button
            aria-describedby={null}
            aria-label="New transaction"
            className="MuiButtonBase-root-110 MuiIconButton-root-104"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            title="New transaction"
            type="button"
          >
            <span
              className="MuiIconButton-label-109"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-113"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-132"
            />
          </button>
        </div>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <div
          aria-colcount={6}
          aria-rowcount={1}
          className="ReactVirtualized__Table"
          role="grid"
          style={Object {}}
        >
          <div
            className="ReactVirtualized__Table__headerRow undefined"
            role="row"
            style={
              Object {
                "height": 25,
                "overflow": "hidden",
                "paddingRight": 0,
                "width": 0,
              }
            }
          >
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 40px",
                  "flex": "0 1 40px",
                  "msFlex": "0 1 40px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
              >
                <span
                  className="MuiButtonBase-root-110 MuiIconButton-root-104 MuiPrivateSwitchBase-root-128 MuiCheckbox-root-122 MuiCheckbox-colorSecondary-127"
                  onBlur={[Function]}
                  onContextMenu={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={null}
                >
                  <span
                    className="MuiIconButton-label-109"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-113"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                    <input
                      checked={false}
                      className="MuiPrivateSwitchBase-input-131"
                      data-indeterminate={false}
                      onChange={[Function]}
                      type="checkbox"
                    />
                  </span>
                  <span
                    className="MuiTouchRipple-root-132"
                  />
                </span>
              </span>
            </div>
            <div
              aria-label="Date"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 120px",
                  "flex": "0 1 120px",
                  "msFlex": "0 1 120px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Date"
              >
                Date
              </span>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "1 1 200px",
                  "flex": "1 1 200px",
                  "msFlex": "1 1 200px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Description"
              >
                Description
              </span>
            </div>
            <div
              aria-label="In"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 100px",
                  "flex": "0 1 100px",
                  "msFlex": "0 1 100px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="In"
              >
                In
              </span>
            </div>
            <div
              aria-label="Out"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 100px",
                  "flex": "0 1 100px",
                  "msFlex": "0 1 100px",
                }
              }
              tabIndex={0}
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
                title="Out"
              >
                Out
              </span>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 40px",
                  "flex": "0 1 40px",
                  "msFlex": "0 1 40px",
                }
              }
            >
              <span
                className="ReactVirtualized__Table__headerTruncatedText"
              />
            </div>
          </div>
          <div
            aria-label="grid"
            aria-readonly={true}
            className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
            onScroll={[Function]}
            role="rowgroup"
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "boxSizing": "border-box",
                "direction": "ltr",
                "height": -25,
                "overflowX": "hidden",
                "overflowY": "auto",
                "position": "relative",
                "width": 0,
                "willChange": "transform",
              }
            }
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
